--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
   ],
   "homepage": "https://github.com/Informatex-GmbH/PHPManifestGenerator",
   "license": "MIT",
+  "version": "1.1.0",
   "authors": [
     {
       "name": "Informatex",
